fix logo positioning on Safari

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 mat-toolbar {
   font-family: 'Ubuntu Condensed', sans-serif;
   height: 3.5rem;
-  padding: 5px;
+  padding: 0;
   justify-content: space-between;
   top: 0px;
   margin: 0 0 2rem 0;
@@ -15,15 +15,23 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
-  margin-left: 3rem;
+}
+
+.branding>a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3.5rem;
+}
+
+img {
+  width: 70px;
+  height: 70px;
 }
 
 a {
   color: #444;
   text-decoration: none;
-  text-transform: uppercase;
   font-size: 1rem;
 }
 
